fix spelling and spacing

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -50,9 +50,9 @@ p a {
 
   /* max-width: 1300px; */
   margin: auto;
-  margin-top: 100px;
+  margin-top: 200px;
   padding-bottom: 100px;
-  margin-bottom: 100px;
+  margin-bottom: 200px;
 }
 .header-portrait-img {
   flex-grow: 0;
@@ -77,7 +77,7 @@ p a {
 
   max-width: 1200px;
   margin: auto;
-  margin-bottom: 200px;
+  margin-bottom: 300px;
   border-left: 2px solid var(--color-background-dark);
 }
 
